@@ -2506,6 +2506,19 @@ applied to the old (compile-time) MPFR version are not available (however
 this information should not have much interest in general).
 @end deftypefun
 
+@deftypefun int mpfr_buildopt_tls_p (void)
+Return a non-zero value if MPFR was compiled as thread safe using
+compiler-level Thread Local Storage (that is MPFR was built with the
+@code{--enable-thread-safe} configure option, see @code{INSTALL} file), return
+zero otherwise.
+@end deftypefun
+
+@deftypefun int mpfr_buildopt_decimal_p (void)
+Return a non-zero value if MPFR was compiled with decimal float support (that
+is MPFR was built with the @code{--enable-decimal-float} configure option),
+return zero otherwise.
+@end deftypefun
+
 @node Exception Related Functions, Compatibility with MPF, Miscellaneous Functions, MPFR Interface
 @comment  node-name,  next,  previous,  up
 @cindex Exception related functions
